homework/5.kubernetes-network/redmine-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gb-rm-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gb-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gb-app
    spec:
      containers:
        - image: redmine:4.1.1
          name: redmine
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 300m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 400Mi
