homework/5.kubernetes-network/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gb-pg-service
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: gb-app
  type: ClusterIP
