homework/5.kubernetes-network/redmine-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gb-rm-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: gb-app
  type: ClusterIP
